<resources>
    <string name="app_name">appTeste</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">show</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Bem vindo ao perfil do Gabriel</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="name_string">Gabriel Volpi</string>
    <string name="age_string">age: 22</string>
    <string name="hobby_string">hobby: futebol</string>
    <string name="todo">TODO</string>
    <string name="description">Description :</string>
    <string name="location">Location:</string>
    <string name="i_currently_live_in_campinas_in_the_danoninho_republic_with_many_friends_who_are_like_family">I currently live in Campinas, in the Danoninho republic, with many friends who are like family.</string>
    <string name="hello_my_name_is_gabriel_volpi_and_n_i_am_currently_an_ifood_intern_one_of_n_my_hobbies_is_football_but_i_also_love_spending_time_with_my_friends_one_of_n_my_dreams_is_to_have_the_opportunity_n_to_do_theater_again">Hello, my name is Gabriel Volpi and I am currently an IFOOD intern. One of my hobbies is football but I also love spending time with my friends. One of my dreams is to have the opportunity to do theater again.</string>
</resources>