<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/foto_perfil"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/nomeTextView"
        android:text="@string/name_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="@+id/imageView"
        style="@style/my_style" />


    <TextView
        android:id="@+id/ageTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/age_string"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/hobbyTextView"
        app:layout_constraintEnd_toEndOf="@+id/hobbyTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nomeTextView"
        app:layout_constraintTop_toBottomOf="@+id/nomeTextView" />

    <TextView
        android:id="@+id/hobbyTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/hobby_string"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="@+id/nomeTextView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/nomeTextView" />

    <TextView
        android:id="@+id/description_title"
        style="@style/my_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/profile_description"
        style="@style/my_style"
        android:layout_width="365dp"
        android:layout_height="141dp"
        android:layout_marginTop="20dp"
        android:text="@string/hello_my_name_is_gabriel_volpi_and_n_i_am_currently_an_ifood_intern_one_of_n_my_hobbies_is_football_but_i_also_love_spending_time_with_my_friends_one_of_n_my_dreams_is_to_have_the_opportunity_n_to_do_theater_again"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_title" />

    <TextView
        android:id="@+id/location"
        style="@style/my_style"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_description" />

    <TextView
        android:id="@+id/location_description"
        style="@style/my_style"
        android:layout_width="153dp"
        android:layout_height="172dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:text="@string/i_currently_live_in_campinas_in_the_danoninho_republic_with_many_friends_who_are_like_family"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/location" />

    <ImageView
        android:id="@+id/foto_rep"
        android:layout_width="179dp"
        android:layout_height="171dp"
        android:layout_marginStart="30dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="@+id/location_description"
        app:layout_constraintStart_toEndOf="@+id/location_description"
        app:layout_constraintTop_toTopOf="@+id/location_description"
        app:srcCompat="@drawable/foto_danone" />


</androidx.constraintlayout.widget.ConstraintLayout>